--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
     <!--<script src='https://www.google.com/recaptcha/api.js'></script>-->
   </head>
@@ -137,20 +138,24 @@
                         </div>
                         <p>HELLO WORLD!! I am thrilled that you are here, visiting my website. I am currently studying Computer Science and Statistics(minor) at Tsinghua University from 2016 to 2020. I was awarded the Global Competence Fellowship for my senior year.</p>
                         <p>During my first three years of my undergraduate life, I am lucky to have three research experiences in Central America(UIUC), the East Coast(MIT), and the West Coast(Stanford), where I worked on Text Mining, Privacy-Preserving Machine Learning, and Biomedical Informatics. Broadening the horizon of human intelligence and technology development is an honorable mission in my mind. I hope I can explore a challenging new field in the following years.</p>
-                        <p>I got several chances to have a look at a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer. I also studied two weeks at AUC in Egypt and participated in a Deep Dive Program in UAEU in United Arab Emirates. Besides, I have also been to Nepal, Singapore, and Turkey.</p>
-                        <p>The most unbelievable experience is participating in the BRICS Youth Forum, a highest-level official youth diplomacy event, as a delegate.</p>
+                        <p>I got several chances to have a look at a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer. I also studied two weeks at AUC in Egypt and participated in a Deep Dive Program in UAEU in United Arab Emirates. Besides, I have also been to Nepal, Singapore, and Turkey. The most unbelievable experience is participating in the BRICS Youth Forum, a highest-level official youth diplomacy event, as a delegate.</p>
                       </div>
                     </div>
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
+
                         <li><span class="title">EMAIL</span><span class="value"><a href="mailto:wangshiy16@mails.tsinghua.edu.cn">wangshiy16@mails.tsinghua.edu.cn</a></span></li>
 
                         <li><span class="title"></span><span class="value"><a href="mailto:shiyinw@mit.edu">shiyinw@mit.edu</a></span></li>
                         <li><span class="title"></span><span class="value"><a href="mailto:v20190150@uaeu.ac.ae">v20190150@uaeu.ac.ae</a></span></li>
 
-                        <li><span class="title"></span><span class="value"><s>shiyinw@stanford.edu</s></span></li>
-                        <li><span class="title"></span><span class="value"><s>shiyinw@illinois.edu</s></span></li>
+                        <details>
+                          <summary></summary>
+                          <li><span class="title"></span><span class="value"><s>shiyinw@stanford.edu</s></span></li>
+                          <li><span class="title"></span><span class="value"><s>shiyinw@illinois.edu</s></span></li>
+                        </details>
+
                         <li><span class="title">LANGUAGE</span><span class="value">English, Chinese, Español(Beginner)</span></li>
                         <li><span class="title">HOBBY</span><span class="value">Watercolor, Musical, Traveling, Equestrian</span></li>
                       </ul>
@@ -158,6 +163,9 @@
                         <div class="download-resume">
                             <a href="files/ShiyinWang_Resume.pdf" class="btn btn-secondary">Resume</a>
                         </div>
+                      <p></p>
+
+
                     </div>
 
                   </div>
@@ -189,23 +197,23 @@
                             <span class="item-period">2020</span>
                             <span class="item-small">United Arab Emirates University, Al Ain, UAE</span>
                             <p><b>Auditing Courses:</b>Principle of International Relations, Social Problems, Arab and Islamic Civilization, Islamic Culture</p>
-                            <p><b>MOOCs: </b><a href="https://www.udacity.com" target="_blank">Developing Android Apps with Kotlin</a>, <a href="https://www.edx.org/course/political-economy-and-economic-development" target="_blank">Political Economy and Economic Development</a>, <a href="https://www.edx.org/course/introduction-to-biology-the-secret-of-life-3", target="_blank">Introduction to Biology - The Secret of Life</a></p>
+                            <p><b>MOOCs: </b><a href="https://www.udacity.com" target="_blank">Developing Android Apps with Kotlin</a>, <a href="https://www.edx.org/course/freedom-expression-age-globalization-columbiax-foe1x" target="_blank">Freedom of Expression in the Age of Globalization</a>, <a href="https://www.edx.org/course/introduction-to-biology-the-secret-of-life-3", target="_blank">Introduction to Biology - The Secret of Life</a></p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title"><u>Electrical Engineering and Computer Science</u> - Non-Degree Special Student Program</h4>
+                            <h4 class="item-title"><u><a href="http://www.eecs.mit.edu">Electrical Engineering and Computer Science</a></u> - Non-Degree Special Student Program</h4>
                             <span class="item-period">2019</span>
                             <span class="item-small">Massachusetts Institute of Technology (MIT), MA, USA</span>
                             <p class="item-description">Overall GPA: 5.0/5.0 (48 units)</p>
-                            <p><b>Courses:</b> 6.437 Inference and Information, 6.802 Computational Systems Biology, 6.045 Automata Computability and Complexity Theory, 6.100  Independent Research Project</p>
+                            <p><b>Courses:</b> 6.437 Inference and Information, <a href="https://mit6874.github.io">6.802 Computational Systems Biology</a>, <a href="http://people.csail.mit.edu/rrw/6.045-2019/">6.045 Automata Computability and Complexity Theory</a>, 6.100  Independent Research Project</p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title"><u>Computer Science (Yao Class)</u> - Bachelor of Engineering</h4>
+                            <h4 class="item-title"><u><a href="https://iiis.tsinghua.edu.cn">Computer Science (Yao Class)</a></u> - Bachelor of Engineering</h4>
                             <span class="item-period">2016-2020</span>
                             <span class="item-small">Tsinghua University, Beijing, China</span>
                             <p class="item-description">Overall GPA: 3.7/4.0 (185 credits)</p>
@@ -240,7 +248,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Research</h3>
+                          <h3>Research & Professional Experiences</h3>
                         </div>
 
                         <div class="timeline">
@@ -248,7 +256,7 @@
                           <!-- Experience 1 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Visiting Student</h4>
-                            <span class="item-period">Jan 2020 - Now</span>
+                            <span class="item-period">Jan 2020 - Mar 2020</span>
                             <span class="item-small">United Arab Emirates University, UAE</span>
                             <p class="item-description">Due to the COVID-19 outbreak, all Chinese students in the 2-week youth diplomatic program received humanitarian support from the UAEU to stay longer as guests</p>
                             <p class="item-description">Lead a task-driven clinical blockchain project at the INDUCE Lab</p>
@@ -267,21 +275,21 @@
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">6.100 Independent Research Project</h4>
-                            <span class="item-period">Feb 2019 - May 2019</span>
-                            <span class="item-small">HanLab, MIT, MA, USA</span>
-                            <p class="item-description">Designed a differential privacy guaranteed framework for edge-cloud training with theoretical proof</p>
-                              <p>Analyzed the trade-off between performance and privacy</p>
-                              <p>(Paper In Progress)</p>
-                          </div>
+                          <!--<div class="timeline-item">-->
+                            <!--<h4 class="item-title">6.100 Independent Research Project</h4>-->
+                            <!--<span class="item-period">Feb 2019 - May 2019</span>-->
+                            <!--<span class="item-small">HanLab, MIT, MA, USA</span>-->
+                            <!--<p class="item-description">Designed a differential privacy guaranteed framework for edge-cloud training with theoretical proof</p>-->
+                              <!--<p>Analyzed the trade-off between performance and privacy</p>-->
+                              <!--<p>(Paper In Progress)</p>-->
+                          <!--</div>-->
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Research Assistant</h4>
                             <span class="item-period">Jul 2018 - Sep 2018</span>
-                            <span class="item-small">DMG, UIUC, IL, USA</span>
+                            <span class="item-small">Data Mining Group, UIUC, IL, USA</span>
                             <p class="item-description">Participated to a project which approach the multi-source partially labelled problem by a CRF+LSTM framework</p>
                               <p>Helped to complete a KDD demo SetSearch+ at the beginning of my intern</p>
                             <p><a href="#">Paper Under Review</a></p>
@@ -292,7 +300,7 @@
                             <div class="timeline-item">
                                 <h4 class="item-title">Student Research Training</h4>
                                 <span class="item-period">Jun 2017 - Aug 2017</span>
-                                <span class="item-small">KEG, Tsinghua University, Beijing, China</span>
+                                <span class="item-small">Knowledge Engineering Group, Tsinghua University, Beijing, China</span>
                                 <p class="item-description">Crawled data from Wikipedia knowledge base</p>
                                 <p>Contributed by putting forward a method to solve inaccurate data source problem innovatively</p>
                                 <p><a href="https://arxiv.org/abs/1710.04822" target="_blank">Proc. IEEE DSC 2018</a></p>
@@ -353,22 +361,22 @@
                         <!-- End of Testimonial Freedom of Expression -->
 
                         <!-- Testimonial Development -->
-                        <div class="testimonial-item">
-                          <div class="testimonial-credits">
-                            <div class="testimonial-picture">
-                              <img src="moocs/MITx_14750x.png" alt="">
-                            </div>
-                            <div class="testimonial-author-info">
-                              <p class="testimonial-author">MITx: 14.750x</p>
-                              <p class="testimonial-firm">Political Economy and Economic Development</p>
-                            </div>
-                          </div>
-                          <div class="testimonial-content">
-                            <div class="testimonial-text">
-                              <p><strong>The methodology to argue causality in sociology researches. Theories and findings related to political leaders, institutions, voting, etc.</strong> <i class="fa fa-comment"></i> (I hoped to learn a theoretical framework in understanding the developing countries.) <i class="fa fa-fw fa-clock-o"></i> Feb 2020</p>
-                            </div>
-                          </div>
-                        </div>
+                        <!--<div class="testimonial-item">-->
+                          <!--<div class="testimonial-credits">-->
+                            <!--<div class="testimonial-picture">-->
+                              <!--<img src="moocs/MITx_14750x.png" alt="">-->
+                            <!--</div>-->
+                            <!--<div class="testimonial-author-info">-->
+                              <!--<p class="testimonial-author">MITx: 14.750x</p>-->
+                              <!--<p class="testimonial-firm">Political Economy and Economic Development</p>-->
+                            <!--</div>-->
+                          <!--</div>-->
+                          <!--<div class="testimonial-content">-->
+                            <!--<div class="testimonial-text">-->
+                              <!--<p><strong>The methodology to argue causality in sociology researches. Theories and findings related to political leaders, institutions, voting, etc.</strong> <i class="fa fa-comment"></i> (I hoped to learn a theoretical framework in understanding the developing countries.) <i class="fa fa-fw fa-clock-o"></i> Feb 2020</p>-->
+                            <!--</div>-->
+                          <!--</div>-->
+                        <!--</div>-->
                         <!-- End of Testimonial Development -->
 
                         <!-- Testimonial Kotlin -->
@@ -436,19 +444,24 @@
                             <div class="skill-percentage skill-4"></div>
                           </div>
 
+                          <h4>Java</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-3"></div>
+                          </div>
+
                           <h4>R</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-5"></div>
                           </div>
 
-                          <h4>c++</h4>
+                          <h4>C++</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-6"></div>
                           </div>
 
                           <h4>Pytorch/Tensorflow</h4>
                             <div class="skill-container">
-                                <div class="skill-percentage skill-7"></div>
+                                <div class="skill-percentage skill-3"></div>
                             </div>
 
                           <h4>Android Development with Kotlin</h4>
