--- a/field/uae/uae.html
+++ b/field/uae/uae.html
@@ -85,14 +85,13 @@
                     <h3>Description</h3>
                 </div>
                 <ul class="project-general-info">
-                    <li><p><i class="fa fa-user"></i>26 male and female students representing 9 Asian universities</p></li>
-                    <li><p><i class="fa fa-map-pin"></i>United Arab Emirates University  <i class="fa fa-globe"></i><a href="http://www.asianuniversities.org" target="_blank">Asian University Alliance (AUA)</a> </p></li>
-                    <li><p><i class="fa fa-camera"></i><a href="https://www.instagram.com/p/B8A5u9qpcBm/?utm_source=ig_web_copy_link" target="_blank">Video</a></p></li>
-                    <li><p><i class="fa fa-file-text-o"></i><a href="field/uae/pre.pdf" target="_blank">Presentation "Transportation Systems in the UAE" (Best Team Award)</a> </p></li>
-                    <li><p><i class="fa fa-file-text-o"></i><a href="field/uae/notes.pdf" target="_blank">Lecture Notes</a> </p></li>
                     <li><p><i class="fa fa-calendar"></i>Jan 2020 ~ Feb 2020</p></li>
-
-                    <li><p><i class="fa fa-sticky-note"></i> My blogs <a href="https://medium.com/@shiyinw/my-unpredictable-journey-in-the-uae-758d98afcacb" target="_blank">Feb 4</a></p></li>
+                    <li><p><i class="fa fa-user"></i>26 male and female students representing 9 Asian universities</p></li>
+                    <li><p><i class="fa fa-map-pin"></i><a href="https://www.uaeu.ac.ae">United Arab Emirates University</a>     <i class="fa fa-globe"></i><a href="http://www.asianuniversities.org" target="_blank">Asian University Alliance (AUA)</a> </p></li>
+                    <li><p></li>
+                    <li><p><i class="fa fa-file-text-o"></i><a href="field/uae/pre.pdf" target="_blank">Presentation "Transportation Systems in the UAE" (Best Team Award)</a> </p></li>
+                    <li><p><i class="fa fa-camera"></i><a href="https://www.instagram.com/p/B8A5u9qpcBm/?utm_source=ig_web_copy_link" target="_blank">Video</a>    <i class="fa fa-file-text-o"></i><a href="field/uae/notes.pdf" target="_blank">Lecture Notes</a> </p></li>
+                    <li><p><i class="fa fa-sticky-note"></i> My blogs <a href="https://medium.com/@shiyinw/my-unpredictable-journey-in-the-uae-758d98afcacb?source=friends_link&sk=12ca540d783eaaac42dd668f5d26417d" target="_blank">Feb 4</a> <a href="https://medium.com/@shiyinw/nostalgia-for-earth-from-the-space-7c3180ada7ae?source=friends_link&sk=5a13a17ec1285f35e01f0ae4acf3074f">Feb 23</a> <a href="https://medium.com/@shiyinw/my-fight-with-the-covid-19-and-how-it-shaped-my-career-trajectories-3a5883a0cc88?source=friends_link&sk=b3c0a1d419eb457e3cab19a791f4b272">Mar 2</a> <a href="https://medium.com/@shiyinw/a-guide-of-self-quarantine-at-home-ca24c3b2bc59?source=friends_link&sk=f83ac8e8ca27ecfd0b8111168576e42f">Mar 22</a></p></li>
                 </ul>
 
                 <p class="text-justify">
