--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
                         <h1>Shiyin Wang</h1>
-                        <div class="owl-carousel text-rotation">                                    
-                          <div class="item">
-                            <div class="sp-subtitle">Fan of Statistics, Biology, and Sociology</div>
-                          </div>
+                        <div class="owl-carousel text-rotation">
                           <div class="item">
                             <div class="sp-subtitle">Computer Science Tsinghua Yao Class 2020</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Amateur in Medicine & International Relations</div>
                           </div>
                         </div>
                       </div>
@@ -143,15 +143,16 @@
                     </div>
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
-                      <ul class="info-list">
+                      <ul   class="info-list">
+
 
                         <li><span class="title">EMAIL</span><span class="value"><a href="mailto:wangshiy16@mails.tsinghua.edu.cn">wangshiy16@mails.tsinghua.edu.cn</a></span></li>
-
+                        <!--<li><span class="title"></span><span class="value"><a href="mailto:shiyinw@andrew.cmu.edu">shiyinw@andrew.cmu.edu</a></span></li>-->
                         <li><span class="title"></span><span class="value"><a href="mailto:shiyinw@mit.edu">shiyinw@mit.edu</a></span></li>
-                        <li><span class="title"></span><span class="value"><a href="mailto:v20190150@uaeu.ac.ae">v20190150@uaeu.ac.ae</a></span></li>
 
                         <details>
                           <summary></summary>
+                          <li><span class="title"></span><span class="value"><s>v20190150@uaeu.ac.ae</s></span></li>
                           <li><span class="title"></span><span class="value"><s>shiyinw@stanford.edu</s></span></li>
                           <li><span class="title"></span><span class="value"><s>shiyinw@illinois.edu</s></span></li>
                         </details>
@@ -252,6 +253,15 @@
                         </div>
 
                         <div class="timeline">
+
+                          <!-- Experience 1 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Software Engineer</h4>
+                            <span class="item-period">Aug 2020 - </span>
+                            <span class="item-small">Google, Tokyo, Japan</span>
+                            <p class="item-description">An Android Product Team</p>
+                          </div>
+                          <!-- / Experience 1 -->
 
                           <!-- Experience 1 -->
                           <div class="timeline-item">
@@ -1097,8 +1107,8 @@
     <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>-->
     <!--<script type="text/javascript" src="js/jquery.googlemap.js"></script>-->
     <script type="text/javascript" src="js/main.js"></script>
-    <link rel="stylesheet" type="text/css" href="assets/lib/css/video-js.css">
-    <script src="assets/lib/js/jquery.js"></script>
-    <script src="assets/lib/js/movive/video.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="assets/lib/css/video-js.css">-->
+    <!--<script src="assets/lib/js/jquery.js"></script>-->
+    <!--<script src="assets/lib/js/movive/video.js"></script>-->
   </body>
 </html>
