Add GoLang blockchain; Update UIUC

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             <span class="item-small">Data Mining Group, UIUC, IL, USA</span>
                             <p class="item-description">Participated to a project which approach the multi-source partially labelled problem by a CRF+LSTM framework</p>
                               <p>Helped to complete a KDD demo SetSearch+ at the beginning of my intern</p>
-                            <p><a href="#">Paper Under Review</a></p>
+                            <p><a href="https://arxiv.org/pdf/2005.00502" target="_blank">Paper</a></p>
                           </div>
                           <!-- / Experience 3 -->
 
@@ -422,21 +422,22 @@
                           <h3>Design <span>Skills</span></h3>
                         </div>
 
+                        <h4>Flask + HTML/CSS</h4>
+                        <div class="skill-container">
+                          <div class="skill-percentage skill-3"></div>
+                        </div>
+
+                          <h4>Graphic Design (Adobe Illustrator)</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-6"></div>
+                          </div>
+
                         <div class="skills-info">
                           <h4>Watercolor</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-1"></div>
                           </div>
 
-                          <h4>Graphic Design (Adobe Illustrator)</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-2"></div>
-                          </div>
-
-                          <h4>Flask + HTML/CSS</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-3"></div>
-                          </div> 
                         </div>
 
                       </div>
@@ -459,6 +460,21 @@
                             <div class="skill-percentage skill-3"></div>
                           </div>
 
+                          <h4>Pytorch/Tensorflow</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-3"></div>
+                          </div>
+
+                          <h4>Android Development with Kotlin</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-7"></div>
+                          </div>
+
+                          <h4>Blockchain Ledger Development with Go</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-7"></div>
+                          </div>
+
                           <h4>R</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-5"></div>
@@ -467,16 +483,6 @@
                           <h4>C++</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-6"></div>
-                          </div>
-
-                          <h4>Pytorch/Tensorflow</h4>
-                            <div class="skill-container">
-                                <div class="skill-percentage skill-3"></div>
-                            </div>
-
-                          <h4>Android Development with Kotlin</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-7"></div>
                           </div>
 
                         </div>
@@ -598,6 +604,17 @@
                       <!-- /Portfolio Item 2 -->
 
 
+                      <figure class="item" data-groups='["all", "product"]'>
+                        <a class="ajax-page-load" href="projects/sppm/sppm.html">
+                          <img src="projects/sppm/2.png" alt="">
+                          <div>
+                            <h5 class="name">Stochastic Progressive Photon Mapping</h5>
+                            <small>THU Graphics Course Project</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
                       <!-- Portfolio Item 1 -->
                       <figure class="item" data-groups='["all", "product"]'>
                         <a class="ajax-page-load" href="projects/database/database.html">
@@ -623,15 +640,17 @@
                       </figure>
 
                       <figure class="item" data-groups='["all", "product"]'>
-                        <a class="ajax-page-load" href="projects/sppm/sppm.html">
-                          <img src="projects/sppm/2.png" alt="">
+                        <a href="https://github.com/shiyinw/blockchain-ledger-from-scratch/" target="_blank">
+                          <img src="projects/blockchain/cover.jpg" alt="">
                           <div>
-                            <h5 class="name">Stochastic Progressive Photon Mapping</h5>
-                            <small>THU Graphics Course Project</small>
+                            <h5 class="name">Blockchain Ledger from Scratch by GoLang</h5>
+                            <small>THU Operating Systems Course Project</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
                         </a>
                       </figure>
+
+
 
                       <figure class="item" data-groups='["all", "product"]'>
                         <a class="ajax-page-load" href="projects/color/color.html">
