--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                           <li><span class="title"></span><span class="value"><s>shiyinw@illinois.edu</s></span></li>
                         </details>
 
-                        <li><span class="title">LANGUAGE</span><span class="value">English, Chinese, Español(Beginner)</span></li>
+                        <li><span class="title">LANGUAGE</span><span class="value">Chinese(Native), English(Professional)</span></li>
+                        <li><span class="title"></span><span class="value">Japanese(Beginner), Español(Beginner)</span></li>
                         <li><span class="title">HOBBY</span><span class="value">Watercolor, Musical, Traveling, Equestrian</span></li>
                       </ul>
 
@@ -207,7 +208,7 @@
                             <h4 class="item-title"><u><a href="http://www.eecs.mit.edu">Electrical Engineering and Computer Science</a></u> - Non-Degree Special Student Program</h4>
                             <span class="item-period">2019</span>
                             <span class="item-small">Massachusetts Institute of Technology (MIT), MA, USA</span>
-                            <p class="item-description">Overall GPA: 5.0/5.0 (48 units)</p>
+                            <p class="item-description">Overall GPA: <a><u>5.0/5.0</u></a> (48 units)</p>
                             <p><b>Courses:</b> 6.437 Inference and Information, <a href="https://mit6874.github.io">6.802 Computational Systems Biology</a>, <a href="http://people.csail.mit.edu/rrw/6.045-2019/">6.045 Automata Computability and Complexity Theory</a>, 6.100  Independent Research Project</p>
                           </div>
                           <!-- / Education 1 -->
@@ -217,13 +218,13 @@
                             <h4 class="item-title"><u><a href="https://iiis.tsinghua.edu.cn">Computer Science (Yao Class)</a></u> - Bachelor of Engineering</h4>
                             <span class="item-period">2016-2020</span>
                             <span class="item-small">Tsinghua University, Beijing, China</span>
-                            <p class="item-description">Overall GPA: 3.7/4.0 (185 credits)</p>
-                            <p class="item-description">Junior & Senior GPA: 3.8/4.0 (59 credits)</p>
-                            <p><b>Core Courses:</b> Algorithm Design, Artificial Intelligence, Artificial Intelligence, Numeric Analysis, Data Structure, Game Theory, Network Science, Quantitative Economics, Principal and Application of Database, Advanced Computer Graphics, Topics in Computational Biology, Random Network Optimization, Advanced Network Security</p>
+                            <p class="item-description">Junior & Senior Years GPA: <a><u>3.9/4.0</u></a> (82 credits)</p>
+                            <p class="item-description">Overall GPA: 3.7/4.0 (208 credits)</p>
+                            <p><b>Core Courses:</b> Algorithm Design, Artificial Intelligence, Numeric Analysis, Data Structure, Game Theory, Network Science, Quantitative Economics, Principal and Application of Database, Advanced Computer Graphics, Topics in Computational Biology, Random Network Optimization, Advanced Network Security, Quantum Computer Science, Operating System</p>
                             <hr />
-                            <p><b><u>Statistics</u> - Minor</b>, 3.6/4.0 (19 credits)</p>
+                            <p><b><u>Statistics</u> - Minor</b>, 3.7/4.0 (19 credits)</p>
                             <p class="item-description">I am a Bayesian :-)</p>
-                            <p><b>Core Courses:</b> Statistical Inference, Multivariate Statistical Analysis, Introduction to Data Science, Bayesian Theory, Nonparametric Statistics</p>
+                            <p><b>Core Courses:</b> Statistical Inference, Linear Regression Analysis, Multivariate Statistical Analysis, Introduction to Data Science, Bayesian Theory, Nonparametric Statistics, Design and Analysis of Experiments</p>
                             <hr />
                             <p><b><u>Business Intelligence Design (BID)</u> - Certificate</b></p>
                             <hr />
@@ -547,7 +548,7 @@
                         <a href="https://medium.com/@shiyinw/my-fight-with-the-covid-19-and-how-it-shaped-my-career-trajectories-3a5883a0cc88?sk=b3c0a1d419eb457e3cab19a791f4b272" target="_blank">
                           <img src="field/covid19/cover.png" alt="">
                           <div>
-                            <h5 class="name">My Fight With the COVID-19 and How It Shaped My Career Trajectories</h5>
+                            <h5 class="name">My Fight with the COVID-19 and How It Shaped My Career Trajectories</h5>
                             <small>Academic Researches, Voluntary Works, Online Learning, and Beyond</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
