RA project at Stanford was accepted by PLoS

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                             <span class="item-small">Helix Group, Stanford University, CA, USA</span>
                             <p class="item-description">Identify novel associations between disease and immune response on molecule networks</p>
                             <p class="item-description">Drug synergy effects prediction with few-shot learning</p>
-                            <p>(Paper In Progress)</p>
+                            <p><a href="https://pubmed.ncbi.nlm.nih.gov/35404985/" target="_blank">Paper</a></p>
                           </div>
                           <!-- / Experience 1 -->
 
