--- a/research/stanford/stanford.html
+++ b/research/stanford/stanford.html
@@ -65,6 +65,7 @@
                     <li><p><i class="fa fa-map"></i>Helix Group, Stanford University</p></li>
                     <!--<li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>-->
                     <li><p><i class="fa fa-calendar"></i>Jul 2019 ~ Aug 2019</p></li>
+                    <li><p><i class="fa fa-paper-plane"></i><a href="https://pubmed.ncbi.nlm.nih.gov/35404985" target="_blank">Paper on PLOS Computational Biology</a></p></li>
                 </ul>
 
                 <p class="text-justify">With the repaid development of big data technologies, biological datasets, such as PubMed, GoTerms, ArrayExpress, Protein Interaction Network and PubTator, are favored by researchers for they preserve high-quality, easy-access and structured data without worry about privacy issue.
