Update the self-introduction at homepage

--- a/index.html
+++ b/index.html
@@ -141,13 +141,10 @@
                     <div class="block-title">
                       <h3>About <span>Me</span></h3>
                     </div>
-                    <p>HELLO WORLD!! I am thrilled that you are here, visiting my website. I joined Google after
-                      finishing my undergraduate studies, and I am now working on Android infrastructure.</p>
-                    <p>At college, I got several chances to have a look at a wide range of developing countries. I went
-                      to Sri Lanka as a sea turtle protection volunteer. I also studied two weeks at AUC in Egypt and
-                      participated in a Deep Dive Program in UAEU in United Arab Emirates. Besides, I have also been to
-                      Nepal, Singapore, and Turkey. The most unbelievable experience is participating in the BRICS Youth
-                      Forum, a highest-level official youth diplomacy event, as a delegate.</p>
+                    <p>I joined Google after finishing my undergraduate studies at Tsinghua University Yao Class, and I am now working as a software engineer on Android and Business Communications in Mountain View.</p>
+                    <p>I can write complex systems from scratch. Working at Google since 2020, I am a professional in Java and Kotlin. I have worked on multiple complex projects, especially Android development and backend server logging. I have three years of student researcher experience with Python in data mining and computational biology at college. I used C++ for multiple course projects, such as Stochastic Progressive Photon Mapping at Computer Graphics.</p>
+                    <p>Besides engineering, I am currently exploring the product management track with a 20% PM project at YouTube Ads. I seek to practice leadership and communications skills through conferences. For community service, I established an escape room club at the Google Beijing office and am serving as a core marketing member at the Hour Of Code project.</p>
+                    <p>I like to read about international affairs and sociology in my free time. I got several chances at college to dive into a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer. I also studied for two weeks at AUC in Egypt and participated in a Deep Dive Program at UAEU in the United Arab Emirates. Besides, I have also been to Nepal, Singapore, and Turkey. The most unbelievable experience is participating as a delegate in the BRICS Youth Forum, a highest-level official youth diplomacy event.</p>
                   </div>
                 </div>
 
