Deprecate @stanford.edu email address

--- a/index.html
+++ b/index.html
@@ -151,14 +151,10 @@
                 <div class="col-sm-6 col-md-6 col-lg-6">
                   <ul class="info-list">
 
-                    <!--<li><span class="title"></span><span class="value"><a href="mailto:shiyinw@andrew.cmu.edu">shiyinw@andrew.cmu.edu</a></span></li>-->
-                    <li><span class="title"></span><span class="value"><a href="mailto:shiyinw@stanford.edu">shiyinw@stanford.edu</a></span>
-                    </li>
-
                     <details>
-                      <summary></summary>
-                      <li><span class="title"></span><span class="value"><s>wangshiy16@mails.tsinghua.edu.cn</s></span>
-                      </li>
+                      <summary>Deprecated emails</summary>
+                      <li><span class="title"></span><span class="value"><s>shiyinw@andrew.cmu.edu</s></span></li>
+                      <li><span class="title"></span><span class="value"><s>wangshiy16@mails.tsinghua.edu.cn</s></span></li>
                       <li><span class="title"></span><span class="value"><s>v20190150@uaeu.ac.ae</s></span></li>
                       <li><span class="title"></span><span class="value"><s>shiyinw@stanford.edu</s></span></li>
                       <li><span class="title"></span><span class="value"><s>shiyinw@illinois.edu</s></span></li>
