--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                     <div class="block-title">
                       <h3>About <span>Me</span></h3>
                     </div>
-                    <p>I joined Google after finishing my undergraduate studies at Tsinghua University Yao Class, and I am now working as a software engineer on Android and Business Communications in Mountain View.</p>
-                    <p>I can write complex systems from scratch. Working at Google since 2020, I am a professional in Java and Kotlin. I have worked on multiple complex projects, especially Android development and backend server logging. I have three years of student researcher experience with Python in data mining and computational biology at college. I used C++ for multiple course projects, such as Stochastic Progressive Photon Mapping at Computer Graphics.</p>
-                    <p>Besides engineering, I am currently exploring the product management track with a 20% PM project at YouTube Ads. I seek to practice leadership and communications skills through conferences. For community service, I established an escape room club at the Google Beijing office and am serving as a core marketing member at the Hour Of Code project.</p>
-                    <p>I like to read about international affairs and sociology in my free time. I got several chances at college to dive into a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer. I also studied for two weeks at AUC in Egypt and participated in a Deep Dive Program at UAEU in the United Arab Emirates. Besides, I have also been to Nepal, Singapore, and Turkey. The most unbelievable experience is participating as a delegate in the BRICS Youth Forum, a highest-level official youth diplomacy event.</p>
+                    <p>I joined Google after finishing my undergraduate studies at Tsinghua University Yao Class, and I am now working as a machine learning engineer for Shopping Ads in Mountain View. My technical expertise includes GenAI, LLM applications, NN, statistical models, and experiment design. I am enthusiastic about the business of digital marketing.</p>
+                    <p>I am experienced in building complex systems from scratch using almost every popular programming language (Java, Python, C++, etc.). I have worked on multiple large-scope projects, especially Android development, backend server logging, and ad serving. I also practiced academic research in data mining and computational biology at college.</p>
+                    <p>I seek to practice leadership and communication skills. For community service, I lead an interest-based LARP club in the Bay Area and coordinated fund-raising for the ZaiGeZaiGu community.</p>
+                    <p>I like to read about international affairs and sociology in my free time. I got several chances at college to dive into a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer. I also studied for two weeks at AUC in Egypt and participated in a Deep Dive Program at UAEU in the United Arab Emirates. The most unbelievable experience is participating as a delegate in the BRICS Youth Forum, one of the highest-level official youth diplomacy events.</p>
                   </div>
                 </div>
 
@@ -164,12 +164,9 @@
                             class="value">Chinese(Native), English(Professional)</span></li>
                     <li><span class="title"></span><span class="value">Japanese(Beginner), Español(Beginner)</span></li>
                     <li><span class="title">HOBBY</span><span
-                            class="value">Watercolor, Musical, Traveling, Scuba Diving</span></li>
+                            class="value">LARP games, skiing (black diamond forest trails), scuba diving, reading sociology literature, and travel vlogging</span></li>
                   </ul>
 
-                  <div class="download-resume">
-                    <a href="files/ShiyinWang_Resume.pdf" class="btn btn-secondary">Resume</a>
-                  </div>
                   <p></p>
 
 
